fixed mobile toggle position and fixed navbar overlapping bug

--- a/css/navbar-styles.css
+++ b/css/navbar-styles.css
@@ -90,7 +90,7 @@
 .toggle-button {
     position: absolute;
     top: 0.5rem;
-    right: 1rem;
+    left: 1rem;
     display: none;
     flex-direction: column;
     justify-content: space-between;
@@ -105,7 +105,12 @@
     border-radius: 10px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 770px) {
+    .theme-toggle {
+        right: 20px;
+        top: 4px;
+    }
+
     .toggle-button {
         display: flex;
     }
@@ -120,7 +125,7 @@
     }
 
     .navbar-container {
-        position: absolute;
+        position: sticky;
         flex-direction: column;
         height: 35px;
     }
