--- a/css/skills-styles.css
+++ b/css/skills-styles.css
@@ -48,14 +48,15 @@ img {
     height: auto;
 }
 
-@media (max-width: 1400px) {
+@media (max-width: 1200px) {
     .skills-container {
         grid-template-columns: repeat(2, 1fr);
     }   
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 900px) {
     .skills-container {
         grid-template-columns: repeat(1, 1fr);
+        width: 80%;
     }
 }
